--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-cayman
+title: [Fast Emotion Recognition]
+description: [Emotion recognition can be serve to low spec devices or embedded system with excellent accuracy]
+show_downloads: ["true"]
