--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: [Fast Emotion Recognition]
-description: [Emotion recognition can be serve to low spec devices or embedded system with excellent accuracy]
+title: [Desktop Navigation with Object motion]
+description: [Navigating through desktop application with the motion of unique object]
 show_downloads: ["true"]
