--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-cayman
-title: [Desktop Navigation with Object motion]
+title: [Desktop Navigation with Object Motion]
 description: [Navigating through desktop application with the motion of unique object]
 show_downloads: ["true"]
